# woongaksi

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.github/: copilot-instructions.md
examples/: woongaksi.service
woongaksi/: __init__.py  __main__.py  client.py  config.py  differ.py  formatter.py  scheduler.py  telegram.py
